care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Added_To_Cart__c.field-meta.xml
<CustomField>
    <fullName>Added_To_Cart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added To Cart</label>
    <type>Checkbox</type>
</CustomField>