care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Borrower_name_for_email__c.field-meta.xml
<CustomField>
    <fullName>Borrower_name_for_email__c</fullName>
    <formula>Loan__r.Borrower__r.Published_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower name for email</label>
    <type>Text</type>
</CustomField>