care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Buffer_Repaid__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Repaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the transaction is for Buffer Repayment</description>
    <label>Buffer Repaid</label>
    <type>Checkbox</type>
</CustomField>