care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Cart_Items__c.field-meta.xml
<CustomField>
    <fullName>Cart_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart Items</label>
    <referenceTo>Cart_Items__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>