care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Held_Date__c.field-meta.xml
<CustomField>
    <fullName>Held_Date__c</fullName>
    <label>Held Date</label>
    <type>DateTime</type>
</CustomField>