care-australia-uat/force-app/main/default/objects/Transaction__c/fields/isTopupOnly__c.field-meta.xml
<CustomField>
    <fullName>isTopupOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To differentiate to topup transaction to help in calculate to rollup for lender balance</description>
    <label>isTopupOnly</label>
    <type>Checkbox</type>
</CustomField>