care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Unique ID</description>
    <label>Lender</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Supporter</value>
        </filterItems>
        <filterItems>
            <field>Contact.IsLender__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>