care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Lender_Email__c.field-meta.xml
<CustomField>
    <fullName>Lender_Email__c</fullName>
    <label>Lender Email</label>
    <type>Email</type>
</CustomField>