care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name__c</fullName>
    <label>Lender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>