care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Opportunity2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions (Opportunity2)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>