care-australia-uat/force-app/main/default/objects/Transaction__c/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <description>To store Transaction Cost Fee</description>
    <label>Transaction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>